Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -154,6 +154,7 @@
     "banking-movements": "Bankbewegungen",
     "barcode": "Strichcode",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
@@ -894,7 +895,7 @@
     "log": "Register",
     "login": "Anmeldung",
     "login-cookie-fail": "Session-Cookie ist fehlgeschlagen",
-    "login-image": "Imagen de login",
+    "login-image": "Login-Bild",
     "login-ok": "Melden Sie sich erfolgreich an (Cookie). Benutzer: '0'",
     "login-password-fail": "Anmeldung fehlgeschlagen",
     "login-text": "Anmeldung",
@@ -1014,7 +1015,7 @@
     "no": "nicht",
     "no-data": "Keine Daten",
     "no-data-received-form": "Ningún dato recibido por formulario",
-    "no-extra-lines": "no-extra-lines",
+    "no-extra-lines": "Keine zusätzlichen Zeilen hinzufügen",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "keine Rechnung",
     "no-outstanding-amount": "Kein ausstehender Betrag",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Rückzahlung der Zahlung %document%",
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
     "register-symbol": "#",
@@ -1324,7 +1327,7 @@
     "save-filter": "Filter speichern",
     "sdk": "sdk",
     "search": "Suche",
-    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
     "search-product": "Produkt suchen",
     "second-hand": "Z",
     "second-quarter": "Zweites Quartal",
@@ -1446,7 +1449,7 @@
     "subfamilies": "Subfamilien",
     "subject": "Betreff",
     "subtotal": "Zwischensumme",
-    "subtract": "Subtract",
+    "subtract": "Subtrahieren",
     "success": "Erfolg",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
@@ -1552,7 +1555,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
-    "travel": "Viaje",
+    "travel": "Reise",
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "type": "Typ",
@@ -1588,6 +1591,8 @@
     "update-time": "Aktuallierungszeit",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Datei hochladen",
     "uploaded-at": "geladen am",
