--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -154,6 +154,7 @@
     "banking-movements": "Banking movements",
     "barcode": "Barcode",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Big",
     "billing": "Billing",
     "billing-address": "Billing address",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Refund of payment %document%",
     "refunds": "Refunds",
     "register": "Register",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Register installation",
     "register-installation-p": "Register your installation to be able to update paid or private plugins.",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "Update time",
     "updated-model": "Updated %model% (%key%) %desc%",
     "updater": "Updater",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Updating attached file counters",
     "upload-file": "Upload file",
     "uploaded-at": "Uploaded at",
