--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -154,6 +154,7 @@
     "banking-movements": "Banku-mugimenduak",
     "barcode": "Barra-kodea",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Handia",
     "billing": "Fakturazioa",
     "billing-address": "Fakturazio helbidea",
@@ -337,7 +338,7 @@
     "credit": "Hartzekoa",
     "crm": "CRM",
     "cron-job": "Zeregin programatua",
-    "cron-timeout": "Kronoa gelditu da PHP-ren exekuzio denbora maksimoa gainditu ez dadin. Mesedez, exekutatu kronoa terminalatik, mugarik hau saihesteko.",
+    "cron-timeout": "Kronoa gelditu da PHP-ren exekuzio denbora maksimoa gainditu ez dadin. Mesedez, exekutatu kronoa terminaletik, mugarik hau saihesteko.",
     "crons": "Krons",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Devoluzioa egingo da %document% dokumentua itzulita",
     "refunds": "Itzulketak",
     "register": "Erregistratu",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Instalazioa erregistratu",
     "register-installation-p": "Zure instalazioa erregistratu ordainpeko edo pribatuak diren pluginak eguneratu ahal izateko.",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "Eguneratze ordua",
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updater": "Eguneratzailea",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Erantsitutako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
