--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -154,6 +154,7 @@
     "banking-movements": "Movimenti bancari",
     "barcode": "Codice a barre",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "grande",
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
@@ -277,7 +278,7 @@
     "common-error": "errore",
     "companies": "Aziende",
     "company": "Azienda",
-    "company-commission-info": "company-commission-info",
+    "company-commission-info": "Si applicherà solo all'azienda selezionata",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
     "company-warehouse": "Azienda\/Magazzino",
@@ -640,7 +641,7 @@
     "footer-text": "testo-di-chiusura",
     "for-admins": "Para administradores",
     "for-all": "Per tutti",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Per tutti gli esercizi",
     "for-purchase": "Per l'acquisto",
     "for-sale": "In vendita",
     "foresee": "Prevedere",
@@ -726,7 +727,7 @@
     "hide": "Nascondi",
     "high": "Alto",
     "high-purchase-price": "Prezzo più alto",
-    "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
+    "hint-create-accounting-entry": "Crea la registrazione contabile per la regolarizzazione delle imposte del periodo",
     "hint-vat-register": "Visualizza\/Modifica registro IVA",
     "history": "Historial",
     "homepage": "Pagina iniziale",
@@ -754,7 +755,7 @@
     "in-stock": "in-stock",
     "inactive": "inattivo",
     "income-and-expenses": "Ingressi e Uscite",
-    "incompatible-document": "incompatible-document",
+    "incompatible-document": "Documento incompatibile: %code%. Per raggruppare i documenti devono avere lo stesso cliente o fornitore, serie, magazzino, valuta e sconti globali.",
     "incompatible-with-facturascripts": "Incompatibile con la versione %version% di FacturaScripts",
     "incorrect-accounting-amount": "Importo dell'entry contabile non corretto.",
     "info": "Informazioni",
@@ -777,7 +778,7 @@
     "invalid-date-there-are-invoices-after": "Data non valida: %date%. La fattura %other% è successiva eppure ha data precedente: %other-date%. Ogni fattura deve avere data precedente o uguale a quella successiva.",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "IBAN invalido %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Codice ISO '%iso-code%' non valido",
     "invalid-number": "invalid-number",
     "invalid-request": "Richiesta non valida",
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
@@ -821,7 +822,7 @@
     "june": "Giugno",
     "justified": "giustificato",
     "key-google-maps": "Chiave di Google Maps",
-    "keys": "keys",
+    "keys": "Chiavi",
     "lang-code": "Codice della lingua",
     "language": "Lingua",
     "languages-ca_ES": "Catalano",
@@ -893,7 +894,7 @@
     "locked": "Bloccato",
     "log": "Log",
     "login": "Accesso",
-    "login-cookie-fail": "Cookie di sessione fallito",
+    "login-cookie-fail": "Cookie di sessione non valido: probabilmente hai effettuato l'accesso da un altro dispositivo o browser.",
     "login-image": "immagine di login",
     "login-ok": "Accedi con successo (cookie). Utente: '0'",
     "login-password-fail": "Accesso fallito",
@@ -929,7 +930,7 @@
     "margin": "margine",
     "margin-top": "Margine superiore",
     "mark-as-homepage": "Segna come homepage",
-    "marked-as-homepage": "Contrassegnato come homepage",
+    "marked-as-homepage": "Contrassegnato come homepage. Premi di nuovo per deselezionare.",
     "max-input-vars-warning": "avviso-max-input-vars",
     "max-risk": "Rischio massimo",
     "maximum-amount-with-cifnif": "Importo massimo con CIF\/NIF",
@@ -974,7 +975,7 @@
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Mayo",
-    "month-6": "Junio",
+    "month-6": "Giugno",
     "month-7": "Luglio",
     "month-8": "Agosto",
     "month-9": "settembre",
@@ -1015,7 +1016,7 @@
     "no-data": "Nessun dato",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-extra-lines": "Nessuna linea extra",
-    "no-gaps-found": "Ningún hueco encontrado",
+    "no-gaps-found": "Nessun gap trovato",
     "no-invoice": "no-invoice",
     "no-outstanding-amount": "nessuna somma in sospeso",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
@@ -1095,7 +1096,7 @@
     "pages": "pagine",
     "paid": "Pagata",
     "paid-or-unpaid": "Pagato o non pagato",
-    "paid-receipts-prevent-action": "paid-receipts-prevent-action",
+    "paid-receipts-prevent-action": "Non è possibile eseguire questa azione a causa di ricevute pagate",
     "parent": "Genitore",
     "parent-account": "Parent Account",
     "parent-family-cant-be-child": "La famiglia madre non può essere la stessa del bambino.",
@@ -1158,7 +1159,7 @@
     "plugin-not-compatible": "Il Plugin %pluginName% non è compatibile con FacturaScripts %versione%",
     "plugin-order": "Ordine: %num%",
     "plugin-phpversion-error": "Il plugin %pluginName% richiede PHP %php% o superiore",
-    "plugin-removal-disabled": "plugin-removal-disabled",
+    "plugin-removal-disabled": "La rimozione dei plugin è disabilitata su questo server",
     "plugin-unsupported-version": "plugin-versione-non-supportata",
     "plugin-update": "Aggiornamento del plugin %pluginName% alla versione %version%",
     "plugins": "Plugins",
@@ -1178,7 +1179,7 @@
     "previous-balance": "Previous Balance",
     "previous-documents": "Documenti precedenti",
     "previous-quarter": "Trimestre precedente",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
+    "previously-purchased-from-supplier": "Acquistato in precedenza dal fornitore",
     "previously-sold-to-customer": "Venduto precedentemente al cliente",
     "price": "Prezzo",
     "price-with-tax": "price-with-tax",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Rimborso del documento %document%",
     "refunds": "refunds",
     "register": "registrare",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registra installazione",
     "register-installation-p": "Registra la tua installazione per poter aggiornare i plugin di pagamento o privati.",
     "register-symbol": "#",
@@ -1409,7 +1412,7 @@
     "special-accounting-entries": "Voci contabili speciali",
     "special-accounts": "conti speciali",
     "specials-actions": "Azioni speciali",
-    "spreadsheet-xls": "File XLS",
+    "spreadsheet-xls": "File Excel",
     "standard": "standard",
     "start": "Inizio",
     "start-date": "Data d'inizio",
@@ -1524,7 +1527,7 @@
     "thousands-separator": "separatore delle migliaia",
     "thursday": "giovedì",
     "ticket": "Ticket",
-    "tickets": "Tickets",
+    "tickets": "Biglietti",
     "time": "Tempo",
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
@@ -1577,7 +1580,7 @@
     "unlink": "Disconnetti",
     "unlink-file": "Scollega file",
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
-    "unlock-entry": "Desbloquear",
+    "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "until-date",
@@ -1588,6 +1591,8 @@
     "update-time": "update-time",
     "updated-model": "Aggiornato %model% (%key%) %desc%",
     "updater": "Updater",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Caricato alle",
