--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -33,7 +33,7 @@
     "accounting-entry-date": "Fecha del asiento",
     "accounting-entry-macros-text": "<p>Puede usar palabras clave especiales (macros) para auto completar información en el campo de descripción:<\/p><dl><dt>Nombre del documento<\/dt><dd>Escriba <strong>%document%<\/strong> para agregar el identificador del documento.<\/dd><dt>Fecha actual<\/dt><dd>Escriba <strong>%date%<\/strong> para agregar la fecha actual.<\/dd><dt>Fecha de entrada<\/dt><dd>Escriba <strong>%date-entry%<\/strong> para agregar la fecha del asiento contable.<\/dd><dt>Mes<\/dt><dd>Escriba <strong>%month%<\/strong> para agregar el nombre del mes de la fecha del asiento contable.<\/dd><\/dl>",
     "accounting-entry-macros-title": "Używanie makr w polu opisu",
-    "accounting-exercise-not-found": "Ejercicio no encontrado",
+    "accounting-exercise-not-found": "Nie znaleziono ćwiczenia",
     "accounting-file": "Archiwum rachunkowe",
     "accounting-heading": "Nagłówek",
     "accounting-heading-code": "ID Nagłówka rachunku",
@@ -42,7 +42,7 @@
     "accounting-plan": "Plan contable",
     "accounting-possible-duplicated": "Możliwe, że to zapis księgowy jest zduplikowany z innym. Jeśli nie, aby uniknąć tego komunikatu, po prostu zmień koncepcję.",
     "accounting-reports": "Raporty księgowe",
-    "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
+    "accounting-within-regularization": "W tym okresie już istnieje regulacja podatkowa. Nie można wprowadzać zmian.",
     "accounts": "Cuentas",
     "accrual-date": "Fecha devengo",
     "action": "Działanie",
@@ -66,7 +66,7 @@
     "advanced": "Avanzado",
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
-    "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
+    "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
     "agents": "Agentes",
     "alert": "Alerta",
     "alerts": "Alertas",
@@ -104,7 +104,7 @@
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versión de API no encontrada",
-    "app-preferences": "Preferencias de aplicación",
+    "app-preferences": "Preferencje aplikacji",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
     "approve": "Aprobar",
@@ -154,7 +154,8 @@
     "banking-movements": "Movimientos bancarios",
     "barcode": "Kod kreskowy",
     "bcc": "CCO",
-    "big": "Grande",
+    "become-sponsor": "Hazte patrocinador",
+    "big": "Duży",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
@@ -380,7 +381,7 @@
     "date": "Data",
     "date-in": "Data wejścia",
     "date-of-suspension": "Data zawieszenia",
-    "date-of-the-document": "Fecha del documento a generar",
+    "date-of-the-document": "Data dokumentu do wygenerowania",
     "date-out": "Fecha salida",
     "date-out-of-exercise-range": "La fecha está fuera del rango del ejercicio %exerciseName%",
     "date-wildcard-info": "Fecha actual (fecha del ordenador)",
@@ -624,7 +625,7 @@
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
     "finished-cron": "Terminada la ejecución del cron. Tiempo consumido: %timeNeeded%",
-    "first-quarter": "1º trimestre",
+    "first-quarter": "1. kwartał",
     "first-steps": "Primeros pasos",
     "first-trimester": "Primer trimestre",
     "fiscal-data": "Datos fiscales",
@@ -673,7 +674,7 @@
     "generate-title": "Genera el informe",
     "generated-accounting-entries": "%quantity% asientos contables generados.",
     "generated-accounts": "%quantity% cuentas contables generadas.",
-    "generated-agents": "%quantity% agentes generados.",
+    "generated-agents": "Wygenerowano %quantity% agentów.",
     "generated-at": "Generado el %when%",
     "generated-contacts": "%quantity% contactos generados.",
     "generated-customer-delivery-notes": "%quantity% albaranes de venta generados.",
@@ -810,7 +811,7 @@
     "items-added-correctly": "%num% elementos añadidos correctamente",
     "items-removed-correctly": "%num% elementos quitados correctamente",
     "ivarep-subaccount-not-found": "Podkonto odwrotne VAT nie znalezione",
-    "ivasop-account-not-found": "Subcuenta de IVA soportado no encontrada",
+    "ivasop-account-not-found": "Nie znaleziono podkonta IVA",
     "january": "Enero",
     "job-name": "Nazwa pracy",
     "journal": "Diario",
@@ -965,7 +966,7 @@
     "model": "Modelo",
     "model-not-found": "Modelo no encontrado: %model%",
     "monday": "Lunes",
-    "month": "Mes",
+    "month": "Miesiąc",
     "month-1": "Enero",
     "month-10": "Octubre",
     "month-11": "Noviembre",
@@ -1003,13 +1004,13 @@
     "new-address": "Nueva dirección",
     "new-customer": "nuevo cliente",
     "new-customers": "Nowi klienci",
-    "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
     "new-password": "Nueva contraseña",
     "new-price": "Nowa cena",
     "new-refund": "Nueva devolución",
     "new-supplier": "Nuevo proveedor",
     "news": "Noticias",
-    "next": "Siguiente",
+    "next": "Następny",
     "nick": "Nick",
     "no": "Nie",
     "no-data": "Sin datos",
@@ -1051,7 +1052,7 @@
     "number2": "Numer 2",
     "numeric-formats": "Formaty numeryczne",
     "numsupplier": "Núm. proveedor",
-    "observations": "Observaciones",
+    "observations": "Uwagi",
     "october": "Octubre",
     "offsetting-account": "Cuenta para contrapartida",
     "only-active": "Solamente activos",
@@ -1230,7 +1231,7 @@
     "rate": "Stawka",
     "rates": "Tarifas",
     "re": "RE",
-    "re-open": "Reabrir",
+    "re-open": "Ponownie otwórz",
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
@@ -1241,7 +1242,7 @@
     "receipt": "Recibo",
     "receipt-expense-account": "Gastos en el recibo %document%",
     "receipts": "Recibos",
-    "record-deleted-correctly": "Registro eliminado correctamente!",
+    "record-deleted-correctly": "Rekord został poprawnie usunięty!",
     "record-deleted-error": "Błąd podczas usuwania rekordu",
     "record-not-found": "Registro no encontrado",
     "record-save-error": "Ha ocurrido un error mientras se guardaban los datos",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devoluciones",
     "register": "Registrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar instalación",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
@@ -1305,7 +1308,7 @@
     "retention": "Zatrzymanie",
     "retentions": "Zatrzymania",
     "review-date": "Data przeglądu",
-    "right": "Derecha",
+    "right": "Prawo",
     "risky-customer": "Cliente con riesgo",
     "rol": "Grupo",
     "role": "Grupa",
@@ -1345,7 +1348,7 @@
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar correo",
     "send-mail-error": "Error al enviar el email",
-    "send-mail-ok": "Email enviado correctamente",
+    "send-mail-ok": "E-mail wysłany pomyślnie",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
@@ -1361,9 +1364,9 @@
     "serieb": "Serie B",
     "serier": "Seria R",
     "serierb": "Serie RB",
-    "series": "Series",
+    "series": "Serie",
     "server": "Servidor",
-    "service": "Servicio",
+    "service": "Usługa",
     "services": "Usługi",
     "settings": "Ajustes",
     "settlement": "Rozliczenie",
@@ -1403,7 +1406,7 @@
     "sort-by-ref-desc": "Sortuj wg referencji malejąco",
     "sorted-asc": "Posortowane rosnąco",
     "sorted-desc": "Posortowane malejąco",
-    "source": "Fuente",
+    "source": "Źródło",
     "source-code": "Kod źródłowy",
     "special-account": "Cuenta especial",
     "special-accounting-entries": "Asientos especiales",
@@ -1445,7 +1448,7 @@
     "subaccounts": "Subcuentas",
     "subfamilies": "Subfamilias",
     "subject": "Temat",
-    "subtotal": "Subtotal",
+    "subtotal": "Suma częściowa",
     "subtract": "Restar",
     "success": "Éxito",
     "sum": "Suma",
@@ -1549,7 +1552,7 @@
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
     "transfers": "Przesunięcia",
-    "transfers-stock": "Transferencias de stock",
+    "transfers-stock": "Transfery zapasów",
     "translation": "Traducción",
     "translations": "Traducciones",
     "travel": "Viaje",
@@ -1559,7 +1562,7 @@
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
     "type-debug": "Tipo depurar",
-    "type-emergency": "Tipo emergencia",
+    "type-emergency": "Typ awaryjny",
     "type-error": "Tipo error",
     "type-info": "Tipo info",
     "type-notice": "Tipo aviso",
@@ -1581,13 +1584,15 @@
     "unpaid": "Nieopłacone",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
-    "until-subaccount": "Hasta subcuenta",
+    "until-subaccount": "Do subkonta",
     "update": "Actualizar",
     "update-stock": "Actualizar stock",
     "update-supplier-prices": "Aktualizacja cen dostawców",
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Aktualizacja",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
@@ -1606,7 +1611,7 @@
     "valuation-type": "Tipo de valoración",
     "value": "Wartość",
     "value-x": "Valor X",
-    "value-y": "Valor Y",
+    "value-y": "Wartość Y",
     "values": "Valores",
     "variables": "Variables",
     "variant": "Wariant",
