--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -154,6 +154,7 @@
     "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -229,7 +230,7 @@
     "children-accounts": "Contas Filhas",
     "choose-currency": "Escolha a moeda",
     "choose-doc-type": "Escolher o tipo de documento",
-    "choose-employee": "Choose employee",
+    "choose-employee": "Escolha empregado",
     "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
@@ -238,7 +239,7 @@
     "cities": "cidades",
     "city": "Cidade",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
-    "clone": "Clone",
+    "clone": "Duplicar",
     "clone-account-entry": "Duplicar a entrada contábil",
     "close": "Fechar",
     "close-box": "Fechar caixa",
@@ -437,7 +438,7 @@
     "desc-provicer-business-name-2": "Nome comercial do fornecedor Descriptio 2",
     "desc-provider-business-name": "Descrição nome comercial do fornecedor",
     "desc-provider-name": "Nome do provedor de descrição",
-    "desc-rate-code": "Código para uso interno da taxa.",
+    "desc-rate-code": "Código para uso interno da tarifa.",
     "desc-vat-document": "Identificador do documento onde a taxa é aplicada",
     "description": "Descrição",
     "description-1": "Descrição 1",
@@ -552,7 +553,7 @@
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
+    "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -664,7 +665,7 @@
     "general-data": "Dados gerais",
     "generate": "Gerar",
     "generate-accounting-entries": "Gerar lançamentos contábeis",
-    "generate-accounting-entry": "generate-accounting-entry",
+    "generate-accounting-entry": "Gerar lançamento contábil",
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "Gerar fatura",
     "generate-receipts": "Gerar recibos",
@@ -672,7 +673,7 @@
     "generate-test-data": "Gerar dados de teste",
     "generate-title": "Criar Relatório",
     "generated-accounting-entries": "0 entradas contábeis geradas.",
-    "generated-accounts": "0 contas geradas.",
+    "generated-accounts": "%quantity% contas contábeis geradas.",
     "generated-agents": "0 agentes gerados.",
     "generated-at": "Gerado em %when%",
     "generated-contacts": "%quantity% contatos gerados.",
@@ -727,7 +728,7 @@
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
-    "hint-vat-register": "View\/Modify VAT registration",
+    "hint-vat-register": "Ver\/Modificar registro de IVA",
     "history": "Histórico",
     "homepage": "Página inicial",
     "host": "Hospedeiro",
@@ -759,7 +760,7 @@
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
     "info": "Informação",
     "infostate-component-title": "Status Information",
-    "initial-number": "initial-number",
+    "initial-number": "Número inicial",
     "insert-update": "Inserir ou atualizar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
@@ -815,7 +816,7 @@
     "job-name": "Nome do Trabalho",
     "journal": "Diário",
     "journal-closing": "Fecho de jornal",
-    "journal-opening": "journal-opening",
+    "journal-opening": "Abertura do diário",
     "journals": "Diários",
     "july": "Julho",
     "june": "Junho",
@@ -963,7 +964,7 @@
     "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o utilize, mas <em>não pode removê-lo<\/em>.",
     "mobile": "mobile",
     "model": "Modelo",
-    "model-not-found": "model-not-found",
+    "model-not-found": "Modelo não encontrado: %model%",
     "monday": "segunda-feira",
     "month": "Mes",
     "month-1": "Janeiro",
@@ -1183,7 +1184,7 @@
     "price": "Preço",
     "price-with-tax": "preço-com-imposto",
     "principal": "a Principal",
-    "print": "Impressão",
+    "print": "Imprimir",
     "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimir todos os registros",
     "print-export-options": "Opções de impressão e exportação",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "register-installation",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
@@ -1303,7 +1306,7 @@
     "restore-data": "Restaurar dados",
     "result": "Resultado",
     "retention": "retenção",
-    "retentions": "Retentions",
+    "retentions": "Retenções",
     "review-date": "Data de revisão",
     "right": "Direita",
     "risky-customer": "Cliente de Risco",
@@ -1349,7 +1352,7 @@
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Enviou um documento",
-    "sent-a-location": "Envió una ubicación",
+    "sent-a-location": "Enviou uma localização",
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
@@ -1566,7 +1569,7 @@
     "type-success": "Tipo correto",
     "type-warning": "Tipo de advertência",
     "unbalance": "Desequilíbrio",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Lançamento desequilibrado",
     "unchecked": "Sem checar",
     "under-minimums": "Abaixo do mínimo",
     "undo": "Desfazer",
@@ -1588,6 +1591,8 @@
     "update-time": "Hora de atualização",
     "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Updater",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
