--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -154,6 +154,7 @@
     "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -229,7 +230,7 @@
     "children-accounts": "Contas Filhas",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Escolher tipo de documento",
-    "choose-employee": "Choose employee",
+    "choose-employee": "Escolha empregado",
     "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
@@ -552,7 +553,7 @@
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
+    "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -963,10 +964,10 @@
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "mobile",
     "model": "Modelo",
-    "model-not-found": "model-not-found",
+    "model-not-found": "Modelo não encontrado: %model%",
     "monday": "segunda-feira",
     "month": "Mes",
-    "month-1": "Enero",
+    "month-1": "Janeiro",
     "month-10": "Octubre",
     "month-11": "Novembro",
     "month-12": "Dezembro",
@@ -986,7 +987,7 @@
     "more": "Mais",
     "more-fields": "Mais campos",
     "more-plugins": "Mais plugins",
-    "move-lines": "Mover líneas",
+    "move-lines": "Mover linhas",
     "movements": "movimentos",
     "my-profile": "Mi perfil",
     "mysql": "MySQL",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "register-installation",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
@@ -1303,7 +1306,7 @@
     "restore-data": "Restaurar dados",
     "result": "Result",
     "retention": "retenção",
-    "retentions": "Retentions",
+    "retentions": "Retenções",
     "review-date": "Data de revisão",
     "right": "Direita",
     "risky-customer": "Cliente de Risco",
@@ -1349,11 +1352,11 @@
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Envió un documento",
-    "sent-a-location": "Envió una ubicación",
+    "sent-a-location": "Enviou uma localização",
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% em %date%",
-    "sepa-suffix": "sepa-suffix",
+    "sepa-suffix": "Sufixo SEPA",
     "september": "Septiembre",
     "sequences": "sequences",
     "serial-number": "Número de Série",
@@ -1498,7 +1501,7 @@
     "tax-areas": "tax-areas",
     "tax-base": "Tax base",
     "tax-credit-account": "Credit account for taxes",
-    "tax-debit-account": "Debit account for taxes",
+    "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
     "telemetry-data-to-send": "dados de telemetria para enviar",
@@ -1588,6 +1591,8 @@
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Uploaded at",
@@ -1612,7 +1617,7 @@
     "variant": "Variant",
     "variants": "Variantes",
     "vat": "CUBA",
-    "vat-document": "VAT Document",
+    "vat-document": "Documento",
     "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
     "vat-number-not-vies": "O número '%vat-number%' não está registado no sistema VIES",
