--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -154,6 +154,7 @@
     "banking-movements": "Moviments bancaris",
     "barcode": "Còdic de barres",
     "bcc": "CCO",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
@@ -658,12 +659,12 @@
     "from-subaccount": "Des de subcompte",
     "full-access": "Accés complet",
     "full-path": "Ruta sancera",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Buit trobat per al número %numero%, dia %fecha%, %codserie% i empresa %idempresa%",
     "general": "General",
     "general-concepts": "Conceptes generals",
     "general-data": "Senyes generals",
     "generate": "Generar",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Generar assentaments",
     "generate-accounting-entry": "Generar assentament contable",
     "generate-doc-type": "Generar tipo de document",
     "generate-invoice": "Crear factura",
@@ -706,7 +707,7 @@
     "group-by-year": "Agrupar per any",
     "group-by-year-unixtime": "Agrupar per any (unixtime)",
     "group-more-docs-p": "group-more-docs-p",
-    "group-name": "Nombre del Grupo",
+    "group-name": "Nom del Grup",
     "group-or-split": "Agrupar o dividir",
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'uns altres. Seleccione les quantitats que desitja usar, la data del nou document i prema el botó generar.",
     "grouping-type": "Agrupación",
@@ -721,7 +722,7 @@
     "height": "Alt",
     "hello": "Hola",
     "help": "Ajuda",
-    "help-button-p": "Consulta la ayuda en cada pantalla",
+    "help-button-p": "Consulta l'ajuda a cada pantalla",
     "help-server-accepts-filesize": "Este servidor permet fitxers d'una mida màxima de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
@@ -750,7 +751,7 @@
     "import-accounting-plan": "Importar el pla contable",
     "import-accounting-plan-p": "Deixa este camp en blanc per a utilitzar el pla contable predeterminat o bé seleccioneu un fitxer al vostre pla contable personalitzat.",
     "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "in-progress": "En progrés",
     "in-stock": "En estoc",
     "inactive": "inactive",
     "income-and-expenses": "Ingressos i Despeses",
@@ -853,7 +854,7 @@
     "last-block": "last-block",
     "last-ip": "Última IP",
     "last-month": "El més passat",
-    "last-price-estimation": "Última precio de presupuesto",
+    "last-price-estimation": "Últim preu de pressupost",
     "last-price-sale": "Últim preu de venda",
     "last-purchase-price": "Últim preu de compra",
     "last-quarter": "El quatrimestre passat",
@@ -1035,7 +1036,7 @@
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "No és una imatge vàlida",
     "not-valid-percentage-retention": "El percentage ha de ser major de 0.0",
     "note": "Note",
     "notes": "Notes",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar l'instalació",
     "register-installation-p": "Registreu la vostra instalació per a poder actualitzar complements de pagament o privats",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "Hora de l'actualització",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualitzador",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Subir archivo",
     "uploaded-at": "Pujat el",
@@ -1614,7 +1619,7 @@
     "vat": "IVA",
     "vat-document": "Document de l'IVA",
     "vat-exception": "Excepció d'IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-is-short": "El número '%vat-number%' és massa curt",
     "vat-number-not-vies": "El número '%vat-number%' no està registrat en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Llibre d'imposts",
@@ -1653,7 +1658,7 @@
     "wizard": "Assistent",
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
     "works": "Trabajos",
     "write-a-message-here": "Escriu un missatge ací",
