--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -154,6 +154,7 @@
     "banking-movements": "Moviments bancaris",
     "barcode": "Codi de barres",
     "bcc": "CCO",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar instal·lació",
     "register-installation-p": "Registri la seva instal·lació per a poder actualitzar plugins de pagament o privats.",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "Hora d'actualització",
     "updated-model": "Actualitzat %model% (%key%) %desc%",
     "updater": "Actualitzador",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat en",
