--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -154,6 +154,7 @@
     "banking-movements": "Movimientos bancarios",
     "barcode": "Código de barras",
     "bcc": "CCO",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devoluciones",
     "register": "Registrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar instalación",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
