--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -154,6 +154,7 @@
     "banking-movements": "Mouvements bancaires",
     "barcode": "code à barre",
     "bcc": "CCI",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Grand",
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Remboursement du reçu %document%",
     "refunds": "Remboursements",
     "register": "S'enregistrer",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Enregistrer cette installation",
     "register-installation-p": "Enregistrez votre installation pour pouvoir mettre à jour les modules externes payants ou privés.",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "Heure de mise à jour",
     "updated-model": "%model% (%key%) %desc% mis à jour",
     "updater": "Processus de mise à jour",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Mise à jour des compteurs de pièces jointes",
     "upload-file": "Subir archivo",
     "uploaded-at": "Téléversé vers",
