--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -154,6 +154,7 @@
     "banking-movements": "Movementos bancarios",
     "barcode": "Código de barras",
     "bcc": "BCC",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
@@ -1261,6 +1262,8 @@
     "refund-payment-concept": "Devolución do recibo %document%",
     "refunds": "Devolucións",
     "register": "Rexistrar",
+    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Rexistrar instalación",
     "register-installation-p": "Rexistre a súa instalación para poder actualizar plugins de pago ou privados",
     "register-symbol": "#",
@@ -1588,6 +1591,8 @@
     "update-time": "hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
+    "updates-available": "Actualizaciones disponibles",
+    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
